[package]
name = "hushmesh-webpki-roots-pem"
version = "0.26.1"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/hushmesh/hushmesh-webpki-roots-pem"
repository = "https://github.com/hushmesh/hushmesh-webpki-roots-pem"
description = "PEM-encoded Mozilla's CA root certificates"

[dependencies]
pki-types = { package = "rustls-pki-types", version = "1", default-features = false }

[dev-dependencies]
hex = "0.4.3"
percent-encoding = "2.3"
rcgen = "0.12.0"
ring = "0.17.0"
rustls = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"] }
webpki-ccadb = "0.1.0"
x509-parser = "0.16.0"
yasna = "0.5.2"
