[package]
name = "hushmesh-webpki-roots-pem"
version = "0.26.1"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/hushmesh/hushmesh-webpki-roots-pem"
repository = "https://github.com/hushmesh/hushmesh-webpki-roots-pem"
description = "PEM-encoded Mozilla's CA root certificates"

[dependencies]

[dev-dependencies]
hex = "0.4.3"
ring = "0.17.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webpki-ccadb = "0.1.0"